# delivery_bot_project

./: .env.example  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
backend/: pyproject.toml
backend/src/: main.py
backend/src/common/: enums.py
backend/src/core/: logging.py
backend/src/models/: dispute.py  shop.py  user.py
src/: main.py  main_example.py
src/admin/: service.py  views.py
src/api/: deps.py  routes.py
src/common/: enums.py  utils.py
src/core/: config.py  database.py  logging.py  validators.py
src/disputes/: service.py  views.py
src/models/: courier.py  dispute.py  order.py  photo_report.py  registration_code.py  shop.py  user.py  zone.py
src/notifications/: service.py  views.py
src/orders/: service.py  views.py
src/photo_reports/: service.py  views.py
src/schemas/: admin.py  courier.py  dispute.py  notification.py  order.py  photo_report.py  registration_code.py  shop.py  user.py  zone.py
src/users/: service.py  views.py
