# ==============================================================================
# Project Metadata
# ==============================================================================
# Содержит основную информацию о вашем проекте
[project]
name = "delivery-bot"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.13"

# Основные зависимости
dependencies = []

# Зависимости, которые нужны только для разработки и тестирования
[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
]

# Ссылки
[project.urls]
"Homepage" = "https://github.com/alisher-balpisov/delivery_bot_project.git" 


# ==============================================================================
# Ruff Configuration (Linter and Formatter)
# ==============================================================================
[tool.ruff]
target-version = "py313"
src = ["src"]

# Файлы и папки, которые нужно исключить из проверки
exclude = [
    ".bzr", ".direnv", ".eggs", ".git", ".hg", ".mypy_cache", ".nox",
    ".pants.d", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv",
    "__pypackages__", "_build", "buck-out", "build", "dist",
    "node_modules", "venv", "migrations",
]

# ------------------------------------------------------------------------------
# Formatter Settings (`ruff format`)
# ------------------------------------------------------------------------------
[tool.ruff.format]
# Использовать двойные кавычки для строк
quote-style = "double"
# Добавлять висячую запятую в многострочных выражениях
trailing-comma = "all"
# Форматировать примеры кода внутри docstrings
docstring-code-format = true

# ------------------------------------------------------------------------------
# Linter Settings (`ruff check`)
# ------------------------------------------------------------------------------
[tool.ruff.lint]
# Набор правил для проверки кода
select = [
    "E", "W", "F", "I", "C4", "B", "C90", "UP", "S", "RUF",
]

# Глобально игнорируемые правила
ignore = [
    "E501",  # Длина строки контролируется форматтером
    "B008",  # Вызовы функций в аргументах по умолчанию (иногда нужно)
    "C901",  # Сложность кода (контролируется через `max-complexity`)
]

# Включить автоисправление для всех возможных правил
fixable = ["ALL"]

# ------------------------------------------------------------------------------
# Plugin-specific Settings
# ------------------------------------------------------------------------------

# Настройки для сортировки импортов (isort)
[tool.ruff.lint.isort]
# Указываем, что `src` — это наша основная директория с кодом
known-first-party = ["src"]

# Настройки для проверки сложности кода (mccabe)
[tool.ruff.lint.mccabe]
# Максимальная допустимая цикломатическая сложность для функций
max-complexity = 10

# ------------------------------------------------------------------------------
# Per-file Ignores
# ------------------------------------------------------------------------------
# Отключение правил для определенных файлов
[tool.ruff.lint.per-file-ignores]
# Разрешить использование `assert` в тестах
"tests/*" = ["S101"]
# Разрешить неиспользуемые импорты в `__init__.py` для удобства экспорта
"__init__.py" = ["F401"]
